# Transformer-Decoder

./: .gitignore  LICENSE  Makefile  README.md  checkpoints.dvc  pyproject.toml  setup.py
.dvc/: config
data/interim/: .gitignore  hp_encode.parquet.dvc  hpmor_encode.parquet.dvc
data/raw/: .gitignore  hp_funfic.dvc  hp_original.dvc  hp_raw.parquet.dvc  hpmor_raw.parquet.dvc  hpmor_ru.epub.dvc
docs/: conf.py  index.rst
mlruns/0/: meta.yaml
models/: model.pt.dvc
notebooks/: data_explore.ipynb  data_preproc.ipynb  text_generator.ipynb
src/data/: data_extraction.py  data_tokenize.py
src/features/: data_tokenize.py
src/models/: model.py  predict_model.py  train_model.py  utils.py
