[tool.poetry]
name = "transformer"
version = "0.1.0"
description = ""
authors = ["Maksim Iogan"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
ebooklib = "^0.18"
bs4 = "^0.0.1"
black = "^23.3.0"
pandas = "^2.0.1"
matplotlib = "^3.7.1"
pillow = "^9.5.0"
fastparquet = "^2023.4.0"
transformers = "^4.29.1"
dvc = "^2.56.0"
dvc-s3 = "^2.22.0"
torch = "2.0.0"
pypdf2 = "^3.0.1"
pycryptodome = "^3.17"
mlflow = "^2.3.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
